# docker-python-cli

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
