[tool.poetry]
name = "python-cli"
version = "0.1.1"
 description = "Docker Python CLI using Poetry"
authors = ["whatapalaver"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"